Fix details view statistics row overflowing on small devices

--- a/styles/details.scss
+++ b/styles/details.scss
@@ -5,18 +5,17 @@ $line-height: 1.5rem !default;
 $column-width: 1rem !default;
 $secondary-opacity: .6;
 
+$header-background: #ECEFF1;
+$header-color: black;
+$header-color: #47526E;
+$url-color: #0277BD;
+
 .details {
   position: relative;
   overflow-y: auto;
   overflow-x: hidden;
   background: white;
   margin: (-$line-height) (-$column-width);
-
-  @media (min-width: 40rem) {
-    padding: 0 $column-width $line-height*3;
-    margin: 0;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  }
 
   > nav {
     @include flex-row;
@@ -30,9 +29,14 @@ $secondary-opacity: .6;
     > section { padding: ($line-height / 2) $column-width; }
 
     section.webshot {
+      max-width: 100%;
       padding: 0;
       margin-bottom: $line-height;
       align-self: center;
+
+      img {
+        max-width: 100%;
+      }
     }
 
     .webshot,
@@ -71,21 +75,32 @@ $secondary-opacity: .6;
   }
 
   > header {
-    background: #ECEFF1;
-    padding: $line-height $column-width;
+    background: $header-background;
+    color: $header-color;
+    padding: 0 $column-width $line-height;
     margin: 0 (-$column-width) $line-height;
+  }
+
+  @media (min-width: 40rem) {
+    padding: 0 $column-width $line-height*3;
+    margin: 0;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+
+    > header {
+      padding-top: $line-height;
+    }
   }
 }
 
 .details section.info {
-  .title {
+  > .title {
     font-size: $line-height;
     line-height: $line-height;
     margin-bottom: $line-height / 2;
-    color: rgba(0,0,0,.9);
+    color: rgba($header-color, 0.9);
 
     &:hover {
-      color: #0277BD;
+      color: $url-color;
       cursor: pointer;
     }
   }
@@ -95,7 +110,7 @@ $secondary-opacity: .6;
     line-height: $line-height;
     margin-bottom: $line-height / 2;
     opacity: $secondary-opacity;
-    color: #0277BD;
+    color: $url-color;
     cursor: pointer;
     transition: opacity .2s ease;
 
@@ -114,16 +129,30 @@ $secondary-opacity: .6;
     }
   }
 
-  .user {
+  .created {
+    flex: 1 1 100%;
+    height: $line-height * 2;
+    @include flex-inline;
+    white-space: nowrap;
+    margin-right: auto;
+    color: rgba($header-color, $secondary-opacity);
     font-size: .75rem;
     line-height: $line-height;
+
+    > .date, > .author {
+      font-weight: 600;
+    }
+
+    > .title, > .date, > .author {
+      margin-right: $column-width/4;
+    }
   }
 
   .description {
     font-size: 1rem;
     line-height: $line-height;
     margin: ($line-height / 2) 0;
-    color: rgba(0,0,0, $secondary-opacity);
+    color: rgba($header-color, $secondary-opacity);
   }
 
   .category.tags > .tag {
@@ -144,37 +173,38 @@ $secondary-opacity: .6;
   }
 
   .statistics {
-    @include flex-row;
-    border-top: 1px solid rgba(0,0,0,.1);
-
-    > .date {
-      align-self: center;
-      white-space: nowrap;
-      margin-right: auto;
-      color: rgba(0,0,0,0.6);
-      font-size: .75rem;
-      line-height: $line-height;
-      font-weight: 400;
-    }
+    @include flex-rows;
+    padding-left: 0;
+    border-top: 1px solid rgba($header-color, .1);
 
     > .splitter {
       align-self: center;
       width: 1px;
       height: 1rem;
       margin: 0 $column-width;
-      background: rgba(0,0,0,.2);
+      background: rgba($header-color, .2);
     }
 
     > .button {
       height: $line-height * 2;
       margin: 0;
-      color: rgba(0,0,0,0.8);
+      color: rgba($header-color, .8);
     }
 
     > .comment-button {
       order: 99;
       margin-left: 0;
       margin-right: 0;
+    }
+
+    > .visits-counter {
+      margin-left: auto;
+    }
+
+    @media (min-width: 25rem) {
+      > .created {
+        flex: 0 0 auto;
+      }
     }
   }
 }
